--- a/maiMobile-iOS/Base.lproj/Main.storyboard
+++ b/maiMobile-iOS/Base.lproj/Main.storyboard
@@ -32,7 +32,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" id="a0n-22-L6u">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="a0n-22-L6u">
                                 <rect key="frame" x="0.0" y="92" width="600" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="a0n-22-L6u" id="NtF-6c-BgJ">
@@ -52,10 +52,10 @@
             </objects>
             <point key="canvasLocation" x="2405" y="400"/>
         </scene>
-        <!--Table View Controller-->
+        <!--Featured Table View Controller-->
         <scene sceneID="Af0-of-gP3">
             <objects>
-                <tableViewController id="jBZ-Mz-0z4" sceneMemberID="viewController">
+                <tableViewController id="jBZ-Mz-0z4" customClass="FeaturedTableViewController" customModule="maiMobile_iOS" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="jIN-aC-XrH">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
